--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "n-messages",
+  "name": "nMessages",
   "version": "1.0.0",
   "description": "Angular Module for toasts and flash messages",
   "homepage": "",
@@ -15,16 +15,12 @@
     "demo"
   ],
   "dependencies": {
-    "angular": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-animate": "^1.3.0",
-    "jquery": "~1.11.2"
+    "angular": "latest"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.0",
-    "angular-scenario": "1.3.0"
-  },
-  "resolutions": {
-    "angular": "^1.3.0"
+    "angular-sanitize": "latest",
+    "angular-animate": "latest",
+    "angular-mocks": "latest",
+    "angular-scenario": "latest"
   }
 }
