--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,28 @@
 {
-  "name": "nMessages",
-  "version": "1.0.0",
-  "description": "Angular Module for toasts and flash messages",
-  "homepage": "",
-  "author": "Dennis Haulund Nielsen",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nodes-galactic/nMessages"
-  },
-  "main": [
-    "dist/nMessages.js"
-  ],
-  "ignore": [
-    "demo"
-  ],
-  "dependencies": {
-    "angular": "latest"
-  },
-  "devDependencies": {
+	"name": "nMessages",
+	"version": "1.0.0",
+	"description": "Angular Module for toasts and flash messages",
+	"homepage": "",
+	"author": "Dennis Haulund Nielsen",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nodes-galactic/nMessages"
+	},
+	"main": [
+		"dist/nMessages.js",
+		"dist/nMessages.css",
+		"dist/nMessages.scss"
+	],
+	"ignore": [
+		"demo"
+	],
+	"dependencies": {
+		"angular": "latest"
+	},
+	"devDependencies": {
 		"angular-sanitize": "latest",
 		"angular-animate": "latest",
-    "angular-mocks": "latest",
-    "angular-scenario": "latest"
-  }
+		"angular-mocks": "latest",
+		"angular-scenario": "latest"
+	}
 }
