--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+*~
+.DS_Store
+.coveralls.yml
 node_modules
-.tmp
-.sass-cache
-bower_components
-_local.config.js
-.idea
+jspm_packages
+.idea/
+coverage/
 npm-debug.log
+tmp/
+typings/
